# daily_stock_analysis

./: README.md  pyproject.toml
docker/: Dockerfile
docs/: CHANGELOG.md  CONTRIBUTING.md
scripts/: ci_gate.sh
src/: analyzer.py  logging_config.py
src/agent/: executor.py
src/core/: pipeline.py  trading_calendar.py
src/services/: task_service.py
tests/: test_market_analyzer_generate_text.py
